# composable_soup

./: .gitignore  =0.1.3  pyproject.toml
.github/workflows/: release.yml
composablesoup/: __init__.py  soup.py
tests/: test_composablesoup.py
