[tool.poetry]
name = "composablesoup"
version = "0.1.1"
description = ""
authors = ["Todd Iverson <tiverson@smumn.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
python-forge = "^18.6"
beautifulsoup4 = "^4.9.3"
composable = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
