[project]
name = "composablesoup"
version = "0.1.2"
description = "Pipeable functions related to beautifulsoup4 objects."
authors = [
    {name="Todd Iverson",email="tiverson@winona.edu"}
    ]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4 (>=4.9.3)",
    "composable  (>=0.2.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
